# 03_UrbanDevelopmentTaiwan

./: .gitignore  .~lock.JOIN & iVoting Proposals.xlsx#  BertTopicTinker.ipynb  InferenceHF.ipynb  InferenceHFCH.ipynb  InferenceHFEN.ipynb  LSAJOIN.ipynb  LSASample.ipynb  README.md  TopicModelingLlama2.ipynb  TopicModelingLlama2BBCData.ipynb  Topicssize150.csv  Topicssize50.csv  Topicssize50_BBC.csv  UnifiedTopicModelling.ipynb  dataExploration.ipynb  draw_diagram.py  optimize_birkenhoff.py  pyproject.toml  reduced_embeddings.pickle  rep_docs.pickle  test.xlsx  textClassification.ipynb  topics_cluster0.txt  utils.py
data/: .~lock.JOIN_iVoting_Proposals_categorized.xlsx#
final/: config.json  ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
notebooks/: LDA_training_only.ipynb
results/: ALLBertLabelsTopicLLama2.csv  ALLBertLabelsTopicLLama2Passed_JOIN_150_150.csv  ALLBertLabelsTopicLLama2Passed_JOIN_150_50.csv  ALLBertLabelsTopicLLama2_iVoting.csv  ALLBertLabelsTopicLLama2_iVoting_10_150.csv  ALLBertLabelsTopicLLama2_iVoting_5_100.csv  ALLBertLabelsTopicLLama2_iVoting_5_50.csv  ALLBertLabelst5-3b_Passed.csv  ModeledTopics.csv  PassedProposalsTrafficSecondTry.csv  Top100PassedProsals.csv  Topicssize50.csv  hierarchy.html  hierarchyt5-3b.html  resultsPassedTraffic.csv  resultsPassedTraffic_35Topics.csv  resultsPassedTraffic_50Topics.csv  topicsHierarchyJOIN150.html  topicsHierarchyiVoting.html  topicsVisJOIN150.html  topicsVisiVoting.html
scripts/: combineCSV.py  createEmbeddings.py  inference.py  loginHF.sh  translateColumns.py  zeroShot.py  zeroShotClass.py
urbandev/: nlp.py  utils.py
(+3 files in other folders)
