[tool.poetry]
name = "03-urbandevelopmenttaiwan"
version = "0.1.0"
description = ""
authors = ["mojoee <47809126+mojoee@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "urbandev"},
    ]

[tool.poetry.dependencies]
python = "^3.11"
gensim = "^4.3.1"
ipykernel = "^6.22.0"
pandas = "^2.0.3"
nltk = "^3.8.1"
matplotlib = "^3.7.1"
openpyxl = "^3.1.2"
jieba = "^0.42.1"
tcsp = "^0.0.9"
googletrans = "3.1.0a0"
pyldavis = "^3.4.1"
wordcloud = "^1.9.2"
transformers = "^4.31.0"
sentencepiece = "^0.1.99"
protobuf = "3.20.1"
torch = "2.0.0"
optimum = "^1.11.0"
accelerate = "^0.21.0"
bitsandbytes = "^0.41.1"
ipywidgets = "^8.1.0"
einops = "^0.6.1"
huggingface-hub = "^0.16.4"
python-dotenv = "^1.0.0"
bertopic = "^0.15.0"
llvmlite = "0.40.0"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
adjusttext = "^0.8"
jinja2 = "3.0.3"
nbconvert = "6.4.4"
gurobipy = "^10.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
